# pbip-tools

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  tox.ini
.github/workflows/: tox_workflow.yaml
Sales & Returns Sample v201912.Report/: definition.pbir  report.json
Sales & Returns Sample v201912.SemanticModel/: .platform
pbi_pbip_filters/: __init__.py  json_types.py  json_utils.py  type_aliases.py
pbi_pbip_filters/clean/: clean_JSON.py
pbi_pbip_filters/smudge/: smudge_JSON.py
pbip_tools/: cli.py  json_utils.py
pbip_tools/clean/: clean_JSON.py
pbip_tools/smudge/: smudge_JSON.py
tests/: __init__.py  conftest.py  test_clean.py  test_filter.py  test_list_order_flag.py  test_pipe.py
tests/Competitive Marketing Analysis/: Competitive Marketing Analysis.pbip
tests/Competitive Marketing Analysis/Competitive Marketing Analysis.SemanticModel/: model.bim
tests/Employee Hiring and History/Employee Hiring and History.Report/: definition.pbir
tests/Sample PBIP Reports/: POWERBI-DESKTOP-SAMPLES_LICENSE  source
tests/Sample PBIP Reports/Competitive Marketing Analysis/Competitive Marketing Analysis.Report/: .platform  definition.pbir  report.json
tests/Sample PBIP Reports/Competitive Marketing Analysis/Competitive Marketing Analysis.SemanticModel/: .platform  diagramLayout.json
tests/Sample PBIP Reports/Employee Hiring and History/: Employee Hiring and History.pbip
tests/Sample PBIP Reports/Employee Hiring and History/Employee Hiring and History.Report/: .platform  report.json
(+5 files in other folders)
